# TsimCAT_minimal

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  SampleProject.tnzip
config/: ads_config.json
reference/: Kinematics.cpp  Kinematics.hpp  RobotSimulator.cpp  RobotSimulator.hpp
scripts/: deploy.ps1
src/: CMakeLists.txt  main.cpp
src/Application/: CMakeLists.txt
src/Application/Backend/: AdsConfigBackend.cpp  AdsConfigBackend.h  Backend.cpp  Backend.h  CMakeLists.txt  ConveyorBackend.cpp  ConveyorBackend.h  RobotBackend.cpp  RobotBackend.h  RobotKinematics.cpp  RobotKinematics.h  RotaryTableBackend.cpp  RotaryTableBackend.h
src/Application/Core/: CMakeLists.txt
src/Application/Core/Common/: CMakeLists.txt  Result.hpp
src/Application/Core/Coroutines/: CMakeLists.txt  Channel.hpp  Context.hpp  Task.hpp  coroutine.hpp
src/Application/Core/Link/: CMakeLists.txt  ILink.hpp  LinkFactory.cpp  LinkFactory.hpp  Subscription.hpp
src/Application/Core/Link/Raw/: IRawLink.hpp  TcpServer.cpp  TcpServer.hpp
src/Application/Core/Link/Symbolic/: AdsClient.cpp  AdsClient.hpp  ISymbolicLink.hpp  LocalAdsLink.cpp  LocalAdsLink.hpp  OpcUaClient.cpp  OpcUaClient.hpp  TcAdsDllClient.cpp  TcAdsDllClient.hpp
src/Application/Core/Utils/: CMakeLists.txt  memory_utils.hpp  queue_utils.hpp
src/Application/UI/: CMakeLists.txt  Main.qml
src/Application/UI/assets/meshes/base_link/: Base_link.qml
src/Application/UI/assets/meshes/base_link/meshes/: node3.mesh
src/Application/UI/assets/meshes/link_1/meshes/: node3.mesh
src/Application/UI/assets/meshes/link_2/meshes/: node3.mesh
src/Application/UI/assets/meshes/link_3/: Link_3.qml
src/Application/UI/assets/meshes/link_3/meshes/: node3.mesh
src/Application/UI/assets/meshes/link_4/meshes/: node3.mesh
src/Application/UI/assets/meshes/link_5/meshes/: node3.mesh
src/Application/UI/assets/meshes/link_6/meshes/: node3.mesh
src/Application/UI/controls/: ConveyorModel.qml  FenceModel.qml  GripperModel.qml  NavigationSidebar.qml  PartModel.qml  Plant3DView.qml  RobotModel.qml  RotaryTableModel.qml
src/Application/UI/icons/: AdsIcon.qml  DashboardIcon.qml  RobotIcon.qml
src/Application/UI/subscreens/: AdsConfig.qml  PlantOverview.qml  RobotStatus.qml
